// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> renders component 1`] = `
.c0 {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.25;
}

.c1 {
  width: 100%;
  border: 1px solid;
  padding: 12px 16px;
  outline: 0;
  border-radius: 12px;
}

<input
  class="c0 c1"
  color="tertiary.main"
  name="nome"
  placeholder="Nome"
  type="text"
  value="Ju"
/>
`;

exports[`<TextField /> when field is invalid displays the respective error message 1`] = `
.c0 {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.25;
}

.c1 {
  width: 100%;
  border: 1px solid;
  padding: 12px 16px;
  outline: 0;
  border-radius: 12px;
}

.c1 + span {
  font-size: 11px;
}

<input
  class="c0 c1"
  color="tertiary.main"
  name="email"
  placeholder="Email"
  type="text"
  value="devsoutinhogmail.com"
/>
`;
